--- a/point-of-sale-app/pom.xml
+++ b/point-of-sale-app/pom.xml
@@ -170,24 +170,18 @@
   <distributionManagement>
     <snapshotRepository>
       <id>artifact-registry</id>
-      <url>
-        artifactregistry://us-maven.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-jars
-      </url>
+      <url>artifactregistry://us-maven.pkg.dev/point-of-sale-ci/pos-jars</url>
     </snapshotRepository>
     <repository>
       <id>artifact-registry</id>
-      <url>
-        artifactregistry://us-maven.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-jars
-      </url>
+      <url>artifactregistry://us-maven.pkg.dev/point-of-sale-ci/pos-jars</url>
     </repository>
   </distributionManagement>
 
   <repositories>
     <repository>
       <id>artifact-registry</id>
-      <url>
-        artifactregistry://us-maven.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-jars
-      </url>
+      <url>artifactregistry://us-maven.pkg.dev/point-of-sale-ci/pos-jars</url>
       <releases>
         <enabled>true</enabled>
       </releases>
