ci: test synchronize event

--- a/.github/cloudbuild/pos-pr-webhook-event.yaml
+++ b/.github/cloudbuild/pos-pr-webhook-event.yaml
@@ -23,7 +23,7 @@ steps:
   - -c
   - |
       echo "Event [$_PULL_REQUEST_EVENT_TYPE] for pr-$_PULL_REQUEST_ID"
-      if [ $_PULL_REQUEST_EVENT_TYPE == 'closed' ]; then
+      if [ $_PULL_REQUEST_EVENT_TYPE == 'synchronize' ]; then
         kubectl delete namespace pr-$_PULL_REQUEST_ID || true
       else
         echo "Nothing to do since it's not a 'closed' event"
