ci: change the image to use for webhook

--- a/.github/cloudbuild/pos-pr-webhook-event.yaml
+++ b/.github/cloudbuild/pos-pr-webhook-event.yaml
@@ -17,7 +17,7 @@ steps:
 # cleanup the namespace and resources
 ###########################################################
 - id: 'delete-namespace-on-pr-close'
-  name: ubuntu
+  name: 'gcr.io/cloud-builders/kubectl'
   entrypoint: bash
   args:
   - -c
