ci: add gcloud command before kctl

--- a/.github/cloudbuild/pos-pr-webhook-event.yaml
+++ b/.github/cloudbuild/pos-pr-webhook-event.yaml
@@ -18,15 +18,13 @@ steps:
 ###########################################################
 - id: 'delete-namespace-on-pr-close'
   name: 'gcr.io/cloud-builders/kubectl'
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=$_DEV_CLUSTER_ZONE'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=$_DEV_CLUSTER'
   entrypoint: bash
   args:
   - -c
   - |
       echo "Event [$_PULL_REQUEST_EVENT_TYPE] for pr-$_PULL_REQUEST_ID"
       if [ $_PULL_REQUEST_EVENT_TYPE == 'synchronize' ]; then
+        gcloud container clusters get-credentials --zone $_DEV_CLUSTER_ZONE $_DEV_CLUSTER
         kubectl delete namespace pr-$_PULL_REQUEST_ID || true
       else
         echo "Nothing to do since it's not a 'closed' event"
