--- a/point-of-sale-app/pom.xml
+++ b/point-of-sale-app/pom.xml
@@ -170,18 +170,18 @@
   <distributionManagement>
     <snapshotRepository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-maven.pkg.dev/point-of-sale-ci/pos-jars</url>
+      <url>artifactregistry://us-central1-maven.pkg.dev/point-of-sale-ci/quickstart-java-repo</url>
     </snapshotRepository>
     <repository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-maven.pkg.dev/point-of-sale-ci/pos-jars</url>
+      <url>artifactregistry://us-central1-maven.pkg.dev/point-of-sale-ci/quickstart-java-repo</url>
     </repository>
   </distributionManagement>
 
   <repositories>
     <repository>
       <id>artifact-registry</id>
-      <url>artifactregistry://us-maven.pkg.dev/point-of-sale-ci/pos-jars</url>
+      <url>artifactregistry://us-central1-maven.pkg.dev/point-of-sale-ci/quickstart-java-repo</url>
       <releases>
         <enabled>true</enabled>
       </releases>
