--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -88,7 +88,10 @@ steps:
   - |
     cat <<EOF > /workspace/deploy.sh -
     #!/bin/bash
-    mvn clean install
+    DIR=$(pwd)
+    echo pwd
+
+    $DIR/mvnw clean install
     gcloud container clusters get-credentials --zone $_DEV_CLUSTER_ZONE $_DEV_CLUSTER
     skaffold run -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER --tag=pr-$_PR_NUMBER
 
