--- a/.github/cloudbuild/pos-push-to-main.yaml
+++ b/.github/cloudbuild/pos-push-to-main.yaml
@@ -39,6 +39,8 @@ steps:
 
     gcloud container clusters get-credentials --zone $_MASTER_CLUSTER_ZONE $_MASTER_CLUSTER
     kubectl apply -f /workspace/namespace.yaml
+
+    ./mvnw clean install
     skaffold run -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_STAGING_NS --tag=$COMMIT_SHA
     EOF
   # indicates that the step need not wait for any other step
