--- a/.github/cloudbuild/pos-push-to-main.yaml
+++ b/.github/cloudbuild/pos-push-to-main.yaml
@@ -37,7 +37,7 @@ steps:
     cat <<EOF > /workspace/deploy.sh -
     #!/bin/bash
 
-    gcloud container clusters get-credentials --zone $_MASTER_CLUSTER_ZONE $_MASTER_CLUSTER
+    gcloud container clusters get-credentials --zone $_MAIN_CLUSTER_ZONE $_MAIN_CLUSTER
     kubectl apply -f /workspace/namespace.yaml
 
     ./mvnw install
